--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "lint": "./node_modules/.bin/eslint -c .eslintrc.js src; exit 0",
     "start": "./node_modules/.bin/webpack-dev-server --inline --d",
     "build": "./node_modules/.bin/webpack --progress",
-    "minify": "NODE_ENV=production npm run build",
-    "legacy": "LEGACY=true npm run build",
-    "productionLegacy": "NODE_ENV=production LEGACY=true npm run build",
+    "minify": "SET NODE_ENV=production && npm run build",
+    "legacy": "SET LEGACY=true && npm run build",
+    "productionLegacy": "SET NODE_ENV=production && SET LEGACY=true npm run build",
     "compile": "./node_modules/.bin/babel --optional runtime -d lib/ src/",
     "watch": "./node_modules/.bin/babel --watch --optional runtime -d lib/ src/",
     "serve": "./node_modules/.bin/gulp serve",
@@ -39,10 +39,10 @@
     "connect": "^3.6.6",
     "documentation": "^5.5.0",
     "eslint": "^4.19.1",
-    "express": "^4.16.3",
+    "express": "^4.19.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "~5.0.0",
+    "gulp-connect": "^5.7.0",
     "gulp-documentation": "3.2.1",
     "gulp-jshint": "^2.1.0",
     "gulp-plumber": "^1.2.0",
@@ -52,7 +52,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "jsdoc": "^3.5.5",
-    "jshint": "^2.9.5",
+    "jshint": "^2.13.6",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
@@ -62,7 +62,7 @@
     "karma-webpack": "^2.0.13",
     "mocha": "^3.5.3",
     "mocha-loader": "^1.1.3",
-    "morgan": "^1.9.0",
+    "morgan": "^1.10.0",
     "optimist": "^0.6.1",
     "portfinder": "^1.0.13",
     "raw-loader": "^0.5.1",
@@ -79,13 +79,13 @@
     "@types/jszip": "^3.1.4",
     "@types/localforage": "0.0.34",
     "event-emitter": "^0.3.5",
-    "jszip": "^3.1.5",
+    "jszip": "^3.10.1",
     "localforage": "^1.7.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.21",
     "marks-pane": "^1.0.9",
     "path-webpack": "0.0.3",
     "stream-browserify": "^2.0.1",
     "url-polyfill": "^1.1.3",
-    "xmldom": "^0.1.27"
+    "xmldom": "^0.6.0"
   }
 }
