--- a/package.json
+++ b/package.json
@@ -10,74 +10,66 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run --browsers ChromeHeadlessNoSandbox",
+    "test": "npx karma start --single-run --browsers ChromeHeadlessNoSandbox",
     "documentation": "./node_modules/.bin/gulp docs",
     "lint": "./node_modules/.bin/eslint -c .eslintrc.js src; exit 0",
     "start": "./node_modules/.bin/webpack-dev-server --inline --d",
-    "build": "./node_modules/.bin/webpack --progress",
+    "build": "npx webpack --progress",
     "minify": "SET NODE_ENV=production && npm run build",
     "legacy": "SET LEGACY=true && npm run build",
     "productionLegacy": "SET NODE_ENV=production && SET LEGACY=true npm run build",
-    "compile": "./node_modules/.bin/babel --optional runtime -d lib/ src/",
-    "watch": "./node_modules/.bin/babel --watch --optional runtime -d lib/ src/",
-    "serve": "./node_modules/.bin/gulp serve",
+    "compile": "npx babel -d lib/ src/",
+    "watch": "npx babel --watch --optional runtime -d lib/ src/",
+    "serve": "npx gulp serve",
     "prepare": "npm run compile && npm run build && npm run minify && npm run legacy && npm run productionLegacy"
   },
   "author": "fchasen@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babili-webpack-plugin": "0.1.2",
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.3",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "7.24.3",
+    "babel-loader": "^9.1.3",
     "colors": "^1.3.0",
     "connect": "^3.6.6",
-    "documentation": "^5.5.0",
+    "documentation": "^14.0.3",
     "eslint": "^4.19.1",
     "express": "^4.19.2",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
+    "gulp": "^4.0.2",
     "gulp-connect": "^5.7.0",
-    "gulp-documentation": "3.2.1",
+    "gulp-documentation": "^3.2.1",
     "gulp-jshint": "^2.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.3.0",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "jsdoc": "^3.5.5",
+    "jsdoc": "^3.6.3",
     "jshint": "^2.13.6",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.13",
-    "mocha": "^3.5.3",
-    "mocha-loader": "^1.1.3",
+    "karma-webpack": "^5.0.1",
+    "mocha": "^10.3.0",
     "morgan": "^1.10.0",
-    "optimist": "^0.6.1",
     "portfinder": "^1.0.13",
     "raw-loader": "^0.5.1",
     "serve-static": "^1.13.2",
-    "tsd-jsdoc": "^2.0.0-beta.6",
-    "uglify": "^0.1.5",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^1.1.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-dev-server": "^2.11.2"
+    "tsd-jsdoc": "^2.5.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.1.1"
   },
   "dependencies": {
     "@types/jszip": "^3.1.4",
     "@types/localforage": "0.0.34",
+    "@xmldom/xmldom": "^0.8.10",
+    "assert": "^2.1.0",
     "event-emitter": "^0.3.5",
     "jszip": "^3.10.1",
     "localforage": "^1.7.2",
@@ -85,7 +77,6 @@
     "marks-pane": "^1.0.9",
     "path-webpack": "0.0.3",
     "stream-browserify": "^2.0.1",
-    "url-polyfill": "^1.1.3",
-    "@xmldom/xmldom": "^0.8.10"
+    "url-polyfill": "^1.1.3"
   }
 }
